<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewTicket">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_editticketname"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/selectbutton"
        android:layout_alignParentLeft="true"
        android:editable="false"
        android:hint="@string/et_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_edittextsource"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText_editticketname"
        android:layout_alignParentLeft="true"
        android:editable="false"
        android:hint="@string/et_source" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_editticketdestination"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText_edittextsource"
        android:layout_alignParentLeft="true"
        android:editable="false"
        android:hint="@string/et_destination" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/trip"
        android:id="@+id/textView_trip"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_editticketdestination"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:id="@+id/radioGroup_trip"
        android:layout_below="@+id/textView_trip"
        android:layout_alignParentLeft="true"
        android:editable="false">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onetrip"
            android:id="@+id/radioButton_editticketoneway"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roundtrip"
            android:id="@+id/radioButton_editticketroundtrip"
            android:checked="false" />

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_editticketdeparturedate"
        android:inputType="date"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/radioGroup_trip"
        android:layout_alignParentLeft="true"
        android:editable="false"
        android:hint="@string/departuredate"
        android:layout_toLeftOf="@+id/editText_editticketdeparturetime"
        android:layout_toStartOf="@+id/editText_editticketdeparturetime" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_editticketdeparturetime"
        android:inputType="time"
        android:layout_alignTop="@+id/editText_editticketdeparturedate"
        android:layout_alignRight="@+id/editText_editticketdestination"
        android:layout_alignEnd="@+id/editText_editticketdestination"
        android:editable="false"
        android:hint="@string/time" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_editticketreturningdate"
        android:text="@string/returningdate"
        android:inputType="date"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:layout_below="@+id/editText_editticketdeparturetime"
        android:layout_alignParentLeft="true"
        android:editable="false"
        android:layout_toLeftOf="@+id/editText_editticketreturningtime"
        android:layout_toStartOf="@+id/editText_editticketreturningtime" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_editticketreturningtime"
        android:text="@string/time"
        android:inputType="time"
        android:visibility="invisible"
        android:layout_below="@+id/editText_editticketdeparturetime"
        android:layout_alignLeft="@+id/editText_editticketdeparturetime"
        android:layout_alignStart="@+id/editText_editticketdeparturetime"
        android:editable="false"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finishbutton"
        android:id="@+id/finishbutton"
        android:layout_alignTop="@+id/rightimageButton"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/leftimageButton"
        android:src="@drawable/keyboard_arrow_left_black"
        android:contentDescription="@string/rewindbutton"
        android:layout_alignTop="@+id/finishbutton"
        android:layout_toLeftOf="@+id/finishbutton"
        android:layout_toStartOf="@+id/finishbutton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fastrewindimageButton"
        android:src="@drawable/fast_rewind_black"
        android:contentDescription="@string/fastrewindbutton"
        android:layout_alignTop="@+id/finishbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fastforwardimageButton"
        android:layout_alignTop="@+id/rightimageButton"
        android:layout_alignRight="@+id/editText_editticketreturningtime"
        android:layout_alignEnd="@+id/editText_editticketreturningtime"
        android:src="@drawable/fast_forward_black"
        android:contentDescription="@string/fastforwardbutton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rightimageButton"
        android:src="@drawable/keyboard_arrow_right_black"
        android:contentDescription="@string/forwardbutton"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/editText_editticketreturningtime"
        android:layout_toStartOf="@+id/editText_editticketreturningtime" />


</RelativeLayout>
